--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -3,6 +3,8 @@ spring:
     activate:
       on-profile: dev     
   jpa:
+    hibernate:
+      ddl-auto: create-drop
     show-sql: true
   flyway:
     url: jdbc:mysql://localhost:3306/develop?createDatabaseIfNotExist=true&serverTimezone=UTC
