--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -4,6 +4,8 @@ spring:
       on-profile: dev     
   jpa:
     show-sql: true
+    hibernate:
+      ddl-auto: create
   flyway:
     url: jdbc:mysql://localhost:3306/develop?createDatabaseIfNotExist=true&serverTimezone=UTC
     user: root
