--- a/pom.xml
+++ b/pom.xml
@@ -68,7 +68,16 @@
 
 	<build>
 		<plugins>
-			  <plugin>
+			<plugin>
+               <groupId>org.apache.maven.plugins</groupId>
+               <artifactId>maven-surefire-plugin</artifactId>
+                   <configuration>
+                <excludes>
+                <exclude>**/*IntegrationTest.java</exclude>
+                </excludes>
+                   </configuration>
+             </plugin>
+			      <plugin>
              <groupId>org.flywaydb</groupId>
              <artifactId>flyway-maven-plugin</artifactId>
              <configuration>
