--- a/pom.xml
+++ b/pom.xml
@@ -63,7 +63,12 @@
 			<artifactId>spring-boot-configuration-processor</artifactId>
 			<optional>true</optional>
 		</dependency>
-
+        <dependency>
+            <groupId>io.rest-assured</groupId>
+         <artifactId>rest-assured</artifactId>
+            <version>5.3.0</version>
+              <scope>test</scope>
+       </dependency>
 	</dependencies>
 
 	<build>
@@ -77,15 +82,6 @@
                 </excludes>
                    </configuration>
              </plugin>
-			      <plugin>
-             <groupId>org.flywaydb</groupId>
-             <artifactId>flyway-maven-plugin</artifactId>
-             <configuration>
-				  <url>jdbc:mysql://localhost:3306/develop</url>
-                    <user>root</user>
-                    <password>password</password>
-			 </configuration>
-              </plugin>
 			    <plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
