--- a/pom.xml
+++ b/pom.xml
@@ -66,7 +66,6 @@
         <dependency>
             <groupId>io.rest-assured</groupId>
          <artifactId>rest-assured</artifactId>
-            <version>5.3.0</version>
               <scope>test</scope>
        </dependency>
 	</dependencies>
@@ -78,7 +77,8 @@
                <artifactId>maven-surefire-plugin</artifactId>
                    <configuration>
                 <excludes>
-                <exclude>**/*IntegrationTest.java</exclude>
+                    <exclude>**/*IntegrationTest.java</exclude>
+                    <exclude>**/*APITest.java</exclude>              
                 </excludes>
                    </configuration>
              </plugin>
