--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,3 +1,4 @@
+spring.config.activate.on-profile=test     
 spring.jpa.show-sql=true
 spring.flyway.url=jdbc:mysql://localhost:3306/develop_test?createDatabaseIfNotExist=true&serverTimezone=UTC
 spring.flyway.user=root
