--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -3,7 +3,7 @@ spring.jpa.show-sql=true
 spring.flyway.url=jdbc:mysql://localhost:3306/develop_test?createDatabaseIfNotExist=true&serverTimezone=UTC
 spring.flyway.user=root
 spring.flyway.password=password
-spring.flyway.locations=classpath:test-migration
+spring.flyway.locations=classpath:test-migration,classpath:test-migration/test
 mysql.datasource.mysql-password=password
 mysql.datasource.mysql-url=jdbc:mysql://localhost:3306/develop_test?createDatabaseIfNotExist=true&serverTimezone=UTC
 mysql.datasource.mysql-user=root
